# platformIO_lvgl_esp32

./: README  platformio.ini
lib/common/: CMakeLists.txt  common_config.c  common_config.h
lib/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h
lib/ui/action/: action.c  action.h  device_data.c  device_data.h  home_set_label.c  home_set_label.h  pick_items_set_label.c  pick_items_set_label.h  setp1_set_label.h  step1_set_label.c
lib/ui/images/: ui_img_alcohol_png.c  ui_img_back_png.c  ui_img_beer_corona_mini_png.c  ui_img_beer_corona_png.c  ui_img_beer_png.c  ui_img_butler_delivery_mini_png.c  ui_img_butler_delivery_png.c  ui_img_checked_png.c  ui_img_corect_png.c  ui_img_home_png.c  ui_img_image_17_png.c  ui_img_lauch_btn_png.c  ui_img_non_alcohol_png.c  ui_img_rectangle_7_png.c  ui_img_short_pass_mini_png.c  ui_img_short_pass_png.c  ui_img_snack_png.c  ui_img_vector_png.c  ui_img_warning_png.c
lib/ui/screens/: ui_PickItems.c  ui_home1.c  ui_setting.c  ui_step1.c  ui_step3.c  ui_step4.c  ui_success.c
src/: main.cpp  touch.h
